--- a/index.html
+++ b/index.html
@@ -12,20 +12,20 @@
 <body>
     <div class="container">
         <div class="wrapper-1">
-            <div class="profile">
+            <div class="profile cards">
                 <img src="" alt="" srcset="">
                 <h6 class="name"></h6>
                 <p class="subtittle"></p>
             </div>
         </div>
         <div class="wrapper-2">
-            <div class="projects-title">
+            <div class="projects-title cards">
                 <h2>Meus projetos</h2>
                 <a href="#">Veja todos</a>
             </div>
             <div class="wrapper-cards">
 
-                <div class="projects-card">
+                <div class="projects-card cards">
                     <div class="title-card-projects">
                         <img src="#" alt="" srcset="">
                         <h4>my-onix</h4>
@@ -47,7 +47,7 @@
                         <p>JavaScript</p>
                     </div>
                 </div>
-                <div class="projects-card">
+                <div class="projects-card cards">
                     <div class="title-card-projects">
                         <img src="#" alt="" srcset="">
                         <h4>my-onix</h4>
