--- a/index.html
+++ b/index.html
@@ -13,63 +13,116 @@
     <div class="container">
         <div class="wrapper-1">
             <div class="profile cards">
-                <img src="" alt="" srcset="">
-                <h6 class="name"></h6>
-                <p class="subtittle"></p>
+                <div class="image-wrapper">
+                    <img src="https://avatars.githubusercontent.com/u/46423825?v=4" alt="foto do usuário">
+                </div>
+                <h6 class="font-title-name">Alef Oliveira</h6>
+                <p class="font-smal-subtitle">FrontEnd Developer</p>
             </div>
+
+            <div class="info-about cards">
+                <div class="info-wrapper">
+                    <div class="content-info">
+                        <img src="./assets/icons/map-pin.svg" alt="">
+                        <p class="font-smal-subtitle">Brasil</p>
+                    </div>
+                    <div class="content-info">
+                        <img src="./assets/icons/briefcase.svg" alt="">
+                        <p class="font-smal-subtitle">Ws Work Services</p>
+                    </div>
+                    <div class="content-info">
+                        <img src="./assets/icons/github.svg" alt="">
+                        <p class="font-smal-subtitle">
+                            <a target="_blank" href="https://github.com/alefd2">Alefd2</a>
+                        </p>
+                    </div>
+                    <div class="content-info">
+                        <img src="./assets/icons/linkedin.svg" alt="">
+                        <p class="font-smal-subtitle"><a target="_blank" href="https://www.linkedin.com/in/alefoliv
+                            ">alefoliv</a> </p>
+                    </div>
+                    <div class="content-info">
+                        <img src="./assets/icons/twitter.svg" alt="">
+                        <p class="font-smal-subtitle"> <a target="_blank"
+                                href="./https://twitter.com/alefoliv1">alefoliv1</a> </p>
+                    </div>
+                    <div class="content-info">
+                        <img src="./assets/icons/globe.svg" alt="">
+                        <p class="font-smal-subtitle">https://alef.dev.com</p>
+                    </div>
+                    <div class="content-info">
+                        <img src="./assets/icons/mail.svg" alt="">
+                        <p class="font-smal-subtitle"><a href="mailto:alefoliv@gmail.com">alefoliv@gmail.com</a></p>
+                    </div>
+                </div>
+            </div>
+
         </div>
+
         <div class="wrapper-2">
             <div class="projects-title cards">
-                <h2>Meus projetos</h2>
-                <a href="#">Veja todos</a>
+                <h2 class="font-title">Meus projetos</h2>
+                <a class="font-title-card" href="#">Veja todos</a>
             </div>
             <div class="wrapper-cards">
 
                 <div class="projects-card cards">
                     <div class="title-card-projects">
-                        <img src="#" alt="" srcset="">
-                        <h4>my-onix</h4>
+                        <img class="icon-edit" src="./assets/icons/folder.svg" alt="" srcset="">
+                        <h4 class="font-title-card">my-onix</h4>
                     </div>
-                    <p>Consulte os códigos de erro que aparecem no painel do veículo Onix.
-                    </p>
-                    <div class="icons1">
-                        <div class="icon">
-                            <p>100</p>
-                            <img src="" alt="" srcset="">
+                    <div class="content-card font-content-card">
+                        <p>Consulte os códigos de erro que aparecem no painel do veículo Onix.
+                        </p>
+                    </div>
+                    <div class="wrapper-botton-card">
+                        <div class="icons">
+                            <div class="icon">
+                                <p class="font-content-card">100</p>
+                                <img class="icon-edit" src="./assets/icons/star.svg" alt="Estrela">
+                            </div>
+                            <div class="icon">
+                                <p class="font-content-card">100</p>
+                                <img class="icon-edit" src="./assets/icons/git-branch.svg" alt="Branch do git">
+                            </div>
                         </div>
-                        <div class="icon">
-                            <p>100</p>
-                            <img src="" alt="" srcset="">
+                        <div class="tecnology">
+                            <div class="elipse"></div>
+                            <p class="font-content-card">JavaScript</p>
                         </div>
-                    </div>
-                    <div class="tecnology">
-                        <img src="" alt="">
-                        <p>JavaScript</p>
-                    </div>
-                </div>
-                <div class="projects-card cards">
-                    <div class="title-card-projects">
-                        <img src="#" alt="" srcset="">
-                        <h4>my-onix</h4>
-                    </div>
-                    <p>Consulte os códigos de erro que aparecem no painel do veículo Onix.
-                    </p>
-                    <div class="icons1">
-                        <div class="icon">
-                            <p>100</p>
-                            <img src="" alt="" srcset="">
-                        </div>
-                        <div class="icon">
-                            <p>100</p>
-                            <img src="" alt="" srcset="">
-                        </div>
-                    </div>
-                    <div class="tecnology">
-                        <img src="" alt="">
-                        <p>JavaScript</p>
                     </div>
                 </div>
 
+                <div class="projects-card cards">
+                    <div class="title-card-projects">
+                        <img class="icon-edit" src="./assets/icons/folder.svg" alt="" srcset="">
+                        <h4 class="font-title-card">my-onix</h4>
+                    </div>
+                    <div class="content-card font-content-card">
+                        <p class="font-content-card">Consulte os códigos de erro que aparecem no painel do veículo Onix.
+                        </p>
+                    </div>
+                    <div class="wrapper-botton-card">
+                        <div class="icons">
+                            <div class="icon">
+                                <p class="font-content-card">100</p>
+                                <img class="icon-edit" src="./assets/icons/star.svg" alt="Estrela">
+                            </div>
+                            <div class="icon">
+                                <p class="font-content-card">100</p>
+                                <img class="icon-edit" src="./assets/icons/git-branch.svg" alt="Branch do git">
+                            </div>
+                        </div>
+                        <div class="tecnology">
+                            <div class="elipse"></div>
+                            <p class="font-content-card">JavaScript</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="projects-title cards">
+                <h2 class="font-title">Recent Posts</h2>
+                <!-- <a href="#">Veja todos</a> -->
             </div>
         </div>
     </div>
