--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                     <div class="content-info">
                         <img src="./assets/icons/twitter.svg" alt="">
                         <p class="font-smal-subtitle"> <a target="_blank"
-                                href="./https://twitter.com/alefoliv1">alefoliv1</a> </p>
+                                href="https://twitter.com/alefoliv1">alefoliv1</a> </p>
                     </div>
                     <div class="content-info">
                         <img src="./assets/icons/globe.svg" alt="">
